--- a/Lab2/index1.html
+++ b/Lab2/index1.html
@@ -20,7 +20,7 @@
   <!---------------- main ------------------->
   <div class="main">
 
-    <div class="navbar">
+    <div class="navbar">      
       <nav>
         <ol>
           <li><a href="index.html">Link1</a></li>
@@ -33,11 +33,11 @@
       <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam dicta praesentium animi dignissimos vel? Neque molestias quo architecto perferendis a dicta facilis vel laborum quas molestiae, vitae, cupiditate inventore! Eaque.</p> 
     </div> 
     <div class="main-content">
-      <div class="text"><p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
-      </div>
+      <div class="text"><p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p></div>
       <div class="container">
         <main>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe amet ex doloremque consectetur dolores animi quasi, minima doloribus debitis reprehenderit pariatur temporibus dicta deserunt maiores quam non explicabo ullam voluptas.
+          
+         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe amet ex doloremque consectetur dolores animi quasi, minima doloribus debitis reprehenderit pariatur temporibus dicta deserunt maiores quam non explicabo ullam voluptas.
           Earum dolorum consectetur tenetur corrupti reprehenderit provident. Hic debitis ipsam dolores vero voluptatum cumque? Voluptatibus recusandae eum quod eos, at, quaerat perferendis nobis quis aut, error explicabo cupiditate temporibus laudantium.
           Temporibus ipsam sed, ratione numquam aspernatur dolore corrupti aut quae quisquam veniam tenetur praesentium. Consequatur odit aliquid vitae, assumenda nesciunt vero sequi deserunt, blanditiis cumque debitis dolorem animi iusto aspernatur?
           Odit quasi necessitatibus cupiditate nemo, eaque minus consequatur voluptatibus cumque temporibus quo perferendis non numquam quam aliquid atque velit eligendi laboriosam sapiente minima quos eos saepe adipisci ratione. Molestiae, consectetur?
